// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Elements snapshots should render Element in relative position 1`] = `
<DocumentFragment>
  <div
    class="DropAnchors DropAnchors--light"
  >
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="DropAnchors__prompt DropAnchors__prompt--light"
    />
    <div
      class="css-wcnq0t Elements__element Elements__element--light Frame Frame--light Element Element--light"
      data-test-box=""
      id="1"
      style="left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; height: 100px; position: relative; width: 100px;"
    >
      <div
        class="css-wcnq0t Element__wrapper Element__wrapper--light"
        data-status="false"
        data-test-box=""
        style="background-color: rgb(255, 255, 255); height: 100%; transform: rotate(0deg); width: 100%;"
      >
        <div
          class="css-wcnq0t Frame__wrapper Frame__wrapper--light"
          data-test-box=""
          style="height: 100px; left: 0px; top: 0px; transform: rotate(0deg); width: 100px;"
        >
          <small
            class="css-wcnq0t Frame__label Frame__label--light Frame__label--top Frame__label--top--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
            data-test-text=""
            style="text-align: inherit;"
          >
            Frame
          </small>
        </div>
      </div>
    </div>
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--top DropAnchors__anchor--top--light"
      data-test-anchor="top"
    />
    <div
      class="DropAnchors__anchor DropAnchors__anchor--light DropAnchors__anchor--bottom DropAnchors__anchor--bottom--light"
      data-test-anchor="bottom"
    />
  </div>
</DocumentFragment>
`;

exports[`Elements snapshots should render Elements 1`] = `<DocumentFragment />`;

exports[`Elements snapshots should render Frame 1`] = `
<DocumentFragment>
  <div
    class="css-wcnq0t Elements__element Elements__element--light Frame Frame--light Element Element--light"
    data-test-box=""
    id="1"
    style="left: 0px; top: 0px; transform: rotate(0deg) translate(0, 0); transform-origin: center center; height: 100px; position: absolute; width: 100px;"
  >
    <div
      class="css-wcnq0t Element__wrapper Element__wrapper--light"
      data-status="false"
      data-test-box=""
      style="background-color: rgb(255, 255, 255); height: 100%; transform: rotate(0deg); width: 100%;"
    >
      <div
        class="css-wcnq0t Frame__wrapper Frame__wrapper--light"
        data-test-box=""
        style="height: 100px; left: 0px; top: 0px; transform: rotate(0deg); width: 100px;"
      >
        <small
          class="css-wcnq0t Frame__label Frame__label--light Frame__label--top Frame__label--top--light Typography Typography--light Typography--neutral1 Typography--neutral1--light Typography--regular Typography--regular--light Typography--normal Typography--normal--light Typography--small Typography--small--light"
          data-test-text=""
          style="text-align: inherit;"
        >
          Frame
        </small>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Elements snapshots should render default Element 1`] = `<DocumentFragment />`;
